<resources>
    <string name="app_name">ScanImin</string>
    <string name="count">count: </string>
    <string name="time_consuming">time consuming: </string>
    <string name="symbology">Symbology: </string>
    <string name="capacity">capacity: </string>
    <string name="content">content: </string>
    <string name="confirm">CONFIRM</string>
    <string name="information_user">INFORMATION</string>
    <string name="retry">Retry</string>
    <string name="textDescription">Thank you for attending today\'s ceremony.</string>
    <string name="textRequestCamera">These photos will be used for our lucky draw at the end of the event. Your participation is greatly appreciated!. Camera will start in 3s countdown</string>
    <string name="retake_the_photo">Retake the photo</string>
    <string name="thank_you">Thank you</string>
    <string name="thank_you_message">Thank you once again for joining our company’s anniversary celebration — it’s truly an honor to have you with us.</string>
    <string name="name">Name: </string>
    <string name="id">ID: </string>
    <string name="text_a_photo">Take a Photo</string>
    <string name="you_are_checked">You have checked in to invite you to the event</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="select_language">Select Language</string>
    <string name="set_time">Set time</string>
    <string name="title_set_time">You can set the language and the photo capture timer</string>"
    <string name="five_s">5s</string>
    <string name="ten_s">10s</string>
    <string name="fitten_s">15s</string>
    <string name="thirty_s">30s</string>
    <string name="one_s">1s</string>
    <string name="loading">Loading</string>
    <string name="setting_language">Set Language</string>
    <string name="time_delay">Time delay</string>
    <string name="vi">Vietnamese</string>
    <string name="en">English</string>
    <string name="you_have_no_account">"You have no account. You can register now"</string>
    <string name="you_choose_language">You can choose language</string>
    <string name="register">REGISTER</string>
    <string name="wellcome">Welcome</string>
    <string name="fill_name">Fill name</string>
    <string name="fill_position">Fill position</string>
    <string name="fill_company">Fill company</string>
    <string name="fill_age">Fill age</string>
    <string name="text_request_camera">Take a photo for the lucky draw section. Adjust and set up to get the best possible photo.\nThe camera will take the picture after a 3-second countdown.</string>
    <string name="qrerror">This QRcode is error</string>
    <string name="list_customer">List Geusts</string>
    <string name="manual">Please verify your information by scanning your card \non the left side of the machine.</string>
    <string name="title">REBOOT 10</string>
    <string name="slogan">A Decade of Milestones, Forging the Future</string>
    <string name="qrcode">Qrcode</string>
    <string name="name_title">Name</string>
    <string name="age">Age</string>
    <string name="status">Status</string>
    <string name="sucess">Sucess</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_name">Search name...</string>
    <string name="manualcamera">Manual</string>
    <string name="auto">Auto</string>
    <string name="three_s">3s</string>
    <string name="title_scan">WELCOME</string>
    <string name="description_scan">Please swipe your card according \nto the instructions below to check your information</string>
    <string name="camera_auto">Camera auto</string>
    <string name="camera_manual">Camera Manual</string>
    <string name="eight_s">8s</string>
    <string name="title_popup">Information</string>
    <string name="code">Code</string>
    <string name="bantiecso">Table number</string>
    <string name="camon">Chân thành cảm ơn Quý khách hàng - Quý đối tác đã \ntham gia sự kiện Kỷ niệm 10 năm thành lập Tân \nHưng Hà và Công bố thành lập THH Holdings!</string>
    <string name="detail">Detail</string>
    <string name="refresh1">Set Image</string>
    <string name="title_list">REBOOT 10</string>
    <string name="slogan_list">Dấu Ấn Thập Kỷ - Mở Lối Tương Lai</string>
    <string name="all_customer">All</string>
    <string name="registed">Registed</string>
    <string name="unregisted">UnRegisted</string>
    <string name="shutdown">Shutdown</string>
    <string name="ip_config">Set Ip</string>
    <string name="port_config">Set Port</string>
    <string name="export_list_data">Export List Data</string>
    <string name="import_list_data">Import List Data</string>
    <string name="setting">Setting</string>
    <string name="save">Save File</string>
    <string name="no_internet">No internet</string>
    <string name="data_download_success">Data downloaded successfully</string>
    <string name="setup_server">Setup Server</string>
    <string name="setup_minio">Setup MiniO</string>
    <string name="set_file">Setup File</string>
    <string name="access_config">Access</string>
    <string name="secret_config">Set Secret</string>
    <string name="budget_config">Budget name</string>
    <string name="Login">Login</string>
    <string name="fill_password">Fill password</string>
</resources>