<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ln_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/title_scan"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/information_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent">

        </ImageView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctr_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_scan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="50dp">
            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/name">
            </TextView>
            <TextView
                android:id="@+id/title_conpany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_name"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/company">
            </TextView>
            <TextView
                android:id="@+id/title_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_conpany"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/position">
            </TextView>
            <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_position"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/id">
            </TextView>

            <View
                android:id="@+id/viewStartEditText"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@+id/title_name">

            </View>

            <LinearLayout
                android:id="@+id/ln_edit_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewStartEditText"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="le thanh lam">
                </TextView>
                <TextView
                    android:id="@+id/edit_text_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="THH">
                </TextView>
                <TextView
                    android:id="@+id/edit_text_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Dev">
                </TextView>
                <TextView
                    android:id="@+id/edit_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="12312313">

                </TextView>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDescription"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ctr_data"
            android:padding="10dp">

        </TextView>

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toBottomOf="@id/text_description">
        </View>

        <TextView
            android:id="@+id/text_request_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRequestCamera"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            android:padding="10dp">

        </TextView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cd_preview_cardView"
            android:layout_width="225dp"
            android:layout_height="225dp"
            app:cardCornerRadius="125dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/ctr_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="225dp"
                android:layout_height="225dp"
                app:scaleType="fillCenter"
                app:layout_constraintTop_toBottomOf="@id/ctr_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_image_cardView"
            android:layout_width="225dp"
            android:layout_height="225dp"
            app:cardCornerRadius="125dp"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/ctr_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toBottomOf="@id/ctr_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher">
            </ImageView>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_confirm"
                app:layout_constraintTop_toTopOf="@+id/btn_confirm"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:text="@string/retake_the_photo"
                android:visibility="visible"/>
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_user"
                app:layout_constraintStart_toEndOf="@id/btn_retry"
                android:layout_margin="15dp"
                android:text="@string/confirm"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ln_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_set_time"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity="center">
            </TextView>
            <TextView
                android:id="@+id/btn_setime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_user"
                app:layout_constraintStart_toEndOf="@id/btn_retry"
                android:layout_margin="15dp"
                android:text="@string/set_time"
                android:textColor="@color/white"
                android:background="#8F57FA"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_take_a_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_request_camera"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/text_a_photo" />


    </LinearLayout>
        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/icon_setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

</FrameLayout>