<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/title_thank_you"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/thank_you"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:src="@drawable/thank_you">
        </ImageView>
        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/title_thank_you"
            android:layout_marginTop="15dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/black">
        </View>
        <LinearLayout
            android:id="@+id/ln_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/arrow_left">
            </ImageView>
            <TextView
                android:id="@+id/title_popup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/title_popup"
                android:gravity="center"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </View>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_image_cardView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="200dp"
            android:layout_marginBottom="4dp"
            android:visibility="visible"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@id/ln_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/title_popup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center"
                android:visibility="visible"
                android:src="@drawable/user">
            </ImageView>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/cd_information"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="3"
            android:layout_marginVertical="50dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_image_cardView"
            app:cardCornerRadius="25dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="THH"
                android:paddingStart="25dp"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/edit_text_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="28sp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:textColor="@color/camon"
                android:gravity="center"
                android:text="THH">
            </TextView>
            <LinearLayout
                android:id="@+id/ctr_data"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginVertical="30dp"
                android:layout_gravity="center"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_cornner_left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/position">
                    </TextView>
                    <TextView
                        android:id="@+id/edit_text_position"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="28sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingHorizontal="25dp"
                        android:textColor="@color/black"
                        android:text="12312313">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/code">
                    </TextView>
                    <TextView
                        android:id="@+id/edit_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="24"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_cornner_right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/bantiecso">
                    </TextView>
                    <TextView
                        android:id="@+id/edit_age"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:paddingHorizontal="25dp"
                        android:textColor="@color/black"
                        android:text="12312313">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/description_thank_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cd_information"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/RED"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/you_are_checked"
            android:layout_marginHorizontal="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:background="@drawable/corner_button"
            android:layout_margin="35dp"
            app:layout_constraintTop_toBottomOf="@id/description_thank_you"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15sp">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>